# QPyPack

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
qpypack/: main.py
src/qpypack/: main.py
