[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpypack"
version = "2.4.4"
description = "A modern graphical packaging config tool for PyInstaller, Nuitka."
readme = "README.md"
authors = [
    { name = "QwejayHuang" }
]
license = { text = "GPL-3.0" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "PySide6>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/qwejay/QPyPack"

[project.scripts]
qpypack = "qpypack.main:main"

[tool.setuptools.package-data]
qpypack = ["icon.ico"]
